--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@mantine/hooks": "^7.6.2",
     "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "2.0.26",
+    "@nextui-org/checkbox": "^2.1.2",
     "@nextui-org/chip": "^2.0.25",
     "@nextui-org/code": "2.0.24",
+    "@nextui-org/divider": "^2.0.28",
     "@nextui-org/input": "2.1.16",
     "@nextui-org/kbd": "2.0.25",
     "@nextui-org/link": "2.0.26",
@@ -32,6 +34,7 @@
     "@nextui-org/spinner": "^2.0.25",
     "@nextui-org/switch": "2.0.25",
     "@nextui-org/system": "2.0.15",
+    "@nextui-org/table": "^2.0.36",
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
