--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
+    "@tanstack/react-query": "^5.45.1",
     "autoprefixer": "10.4.16",
     "clsx": "^2.0.0",
     "embla-carousel-react": "^8.0.0",
@@ -53,7 +54,10 @@
     "react-player": "^2.15.1",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.1.18",
-    "tailwindcss": "3.4.3"
+    "tailwindcss": "3.4.3",
+    "uuid": "^10.0.0",
+    "viem": "2.x",
+    "wagmi": "^2.10.6"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.5",
@@ -65,6 +69,7 @@
     "@types/prettier": "2.7.3",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^10.0.0",
     "cross-env": "7.0.3",
     "file-loader": "6.2.0",
     "husky": "8.0.0",
