--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-aria/visually-hidden": "^3.8.6",
     "@tanstack/react-query": "^5.45.1",
     "autoprefixer": "10.4.16",
+    "bignumber.js": "^9.1.2",
     "clsx": "^2.0.0",
     "embla-carousel-react": "^8.0.0",
     "framer-motion": "^10.16.4",
