--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@gnolang/gno-js-client": "^1.3.0",
     "@mantine/hooks": "^7.6.2",
     "@nextui-org/avatar": "^2.0.24",
     "@nextui-org/button": "2.0.26",
@@ -53,6 +54,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-player": "^2.15.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.2.1",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.4.3",
