--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.51.3",
     "react-player": "^2.15.1",
     "sonner": "^1.5.0",
